fix overflow hidden in slide page

--- a/src/components/Featured/featured.scss
+++ b/src/components/Featured/featured.scss
@@ -110,3 +110,8 @@
     transform-origin: 50% 100%;
   }
 }
+
+.slide-page {
+  overflow: hidden;
+  height: 100vh;
+}
